Wrapping up Nomster, more misc cosmetic fixes, removed unnecessary comments

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -44,8 +44,8 @@ body {
 }
 
 .nav-item {
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 .npaginator {
